--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,12 +9,23 @@
 	<script src="popup.js"></script>
 </head>
 <style>
+	html {
+		min-height: 650px;
+	}
 	body {
+		min-height: 650px;
 		min-width: 400px;
+	}
+	button.remove-ban-button {
+		float: right;
+		padding-right: 5px;
+	}
+	li.list-group-item {
+		padding-bottom: 25px;
 	}
 </style>
 <body>
-	<div class="container">
+	<div class="container" style="padding-top: 10px;">
 		<div class="panel panel-default">
 			<div class="panel-heading">차단 유저 추가하기</div>
 			<div class="panel-body">
@@ -33,10 +44,22 @@
 			<div class="panel-body">
 				<p>
 					<ul class="list-group" id="bannednick">
-						
+
 					</ul>
 				</p>
 			</div>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">사용 방법</div>
+			<div class="panel-body">
+				<ul>
+				<li><strong>상단 입력창</strong> 에 닉네임을 입력 후 <strong>확인</strong> 을 눌러 차단하거나</li>
+				<li><strong>닉네임을 드래그 후 우클릭-차단</strong> 기능을 이용하여 차단한다.</li>
+				<li>어그로 안보이는 펨코를 즐긴다.</li>
+				<li>혹시나 댓글을 지워서 차단이 풀리면 <strong>새로고침</strong>을 해서 다시 차단을 걸어준다.</li>
+				<li>즐펨!</li>
+				</ul>
+			</body>
 		</div>
 	</div>
 </body>
