댓글 달고 나서 Refresh 하도록 Callback

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -50,6 +50,15 @@
 			</div>
 		</div>
 		<div class="panel panel-default">
+			<div class="panel-heading">각종 패치</div>
+			<div class="panel-body">
+				<p>
+					<input type="checkbox" id="vote_patch">
+					<label for="vote_patch">추천/비추 이전 버전으로 되돌리기</label>
+				</p>
+			</div>
+		</div>
+		<div class="panel panel-default">
 			<div class="panel-heading">사용 방법</div>
 			<div class="panel-body">
 				<ul>
