알등이/퍼나제거 패치 HTML 추가

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -56,6 +56,14 @@
 					<input type="checkbox" id="vote_patch">
 					<label for="vote_patch">추천/비추 이전 버전으로 되돌리기</label>
 				</p>
+				<p>
+					<input type="checkbox" id="egg_patch">
+					<label for="egg_patch">모두 알등이로 만들어 버리기</label>
+				</p>
+				<p>
+					<input type="checkbox" id="con_patch">
+					<label for="vote_patch">퍼나 떼기</label>
+				</p>
 			</div>
 		</div>
 		<div class="panel panel-default">
